tests/ui/parser/using_lhs_asterisk.sol
// Ported from test/libsolidity/syntaxTests/using/using_lhs_asterisk.sol.

using * for uint; //~ ERROR: expected identifier
